[package]
name = "dual-n-back"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.19"
bevy_egui = "0.21.0"
bevy_pkv = "0.8.0"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
serde = "1.0.185"
strum = "0.25.0"
strum_macros = "0.25.2"

[dependencies.bevy]
version = "0.11"
features = [
"bevy_audio",
"bevy_asset",
"wav",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
